# telibot

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  sample.env
telibot/: __main__.py  exceptions.py  settings.py
telibot/core/: __init__.py  activies.py  client.py  custom_exceptions.py  requests.py  teli_client.py  utils.py
telibot/utils/: __init__.py  log_handler.py  play_audio_file.py
