[tool.poetry]
name = "telibot"
version = "0.1.0"
description = "Telibot, a discord bot!"
authors = ["TeliDev <hiagobvt@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.0"
discord-py = {extras = ["voice"], version = "^2.3.2"}
setuptools = "^70.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
