[project]
name = "telibot"
version = "0.1.0"
description = "Telibot, a discord bot!"
authors = ["TeliDev <hiagobvt@live.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py[voice]>=2.5.2",
    "mypy>=1.15.0",
    "pydantic-settings>=2.8.1",
    "requests>=2.32.3",
    "setuptools>=77.0.3",
    "types-requests>=2.32.0.20250306",
]

[tool.pylint]
disable = [
"C0301",
"W0223",
"W0718",
]
